<resources>
    <string name="app_name">My Application</string>
    <string name="app_text">My Application</string>
    <string name="standard">Standard</string>
    <string name="scientifique">Scientifique</string>
    <string name="programmeur">Programmeur</string>
    <string name="devise">Devise</string>
    <string name="volume">Volume</string>
    <string name="temperature">Temperature</string>
    <string name="calcTitle">Calculatrice</string>
    <string name="convertTitle">Convertisseur</string>
    <string name="progression">En Cours</string>
    <string name="auth">Authentification</string>
    <string name="nom">Nom</string>
    <string name="mail">E-mail</string>
    <string name="mp">Mot de Passe</string>
    <string name="btnValider">Valider</string>
    <string name="btnNouveau">Nouveau Compte ?</string>
    <string name="titreNouveauCompte">Nouveau Compte</string>
    <string name="btnCreerNouveauCompte">Créer</string>
    <string name="btnRetour">Retour</string>
    <string name="developpeuse">Développé par : Meriam Ourri</string>
    <string name="deconnecter">Log out</string>
    <string name="clients">Clients</string>
    <string name="logoname">CustDigit</string>
    <string name="modifierViewTitre">Modifier Client</string>
    <string name="btnMod">Valider</string>

</resources>