<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    android:orientation="vertical"
    tools:context=".Authentification">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/auth" />

    <TextView
        android:id="@+id/txtAuthTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/auth"
        android:textColor="#BCBCBC"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:text="@string/mail"
            android:textColor="#D5D5D5"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#EFEFEF" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/mp"
            android:textColor="#D5D5D5"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#EFEFEF" />

        <Button
            android:id="@+id/btnNouveauCompte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/btnNouveau"
            android:textAlignment="textStart"
            android:textColor="#00ACC1" />

        <Button
            android:id="@+id/btnAuthValider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#00ACC1"
            android:padding="10dp"
            android:text="@string/btnValider"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:cornerRadius="1dp" />

    </LinearLayout>

</LinearLayout>