<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainDrawerMod"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modifierClient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#35185A"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <include layout="@layout/maintoolbar" />

            <TextView
                android:id="@+id/txtStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/logoname"
                android:textColor="#D1C9C9"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/modifierViewTitre"
            android:textColor="#2C2C2C"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:text="@string/nom"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edModNom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="Votre Nom"
                android:inputType="text"
                android:textColor="#131313" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/mail"
                android:textColor="#000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edModMail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="Votre e-mail"
                android:inputType="textEmailAddress"
                android:textColor="#131313" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:padding="3dp"
                android:text="@string/mp"
                android:textColor="#000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edModMp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="Mot de Passe"
                android:inputType="textPassword"
                android:textColor="#131313" />

            <TextView
                android:id="@+id/txtModError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:textColor="#9F1B1B"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnModifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#35185A"
                android:padding="10dp"
                android:text="@string/btnMod"
                android:textSize="20sp"
                app:cornerRadius="1dp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include layout="@layout/maindrawermenu" />
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>