<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E2E2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#35185A"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="276dp"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/baseline_logout_24" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_weight="1"
            android:text="@string/deconnecter"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuCalculatrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/baseline_calculate_24" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_weight="1"
            android:text="@string/calcTitle"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuClients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/baseline_manage_accounts_24" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_weight="1"
            android:text="@string/clients"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:background="#E2E1E1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="#35185A"
            android:backgroundTint="#35185A"
            android:text="@string/developpeuse"
            android:textAlignment="center"
            android:textColor="#DDD2EC" />
    </LinearLayout>

</LinearLayout>